Total restructuration of the repository and addition of the arduino library

--- a/Software/Firmapper_RPi/Makefile
+++ b/Software/Firmapper_RPi/Makefile
@@ -2,7 +2,7 @@ OS = LINUX
 #OS = MACOSX
 #OS = WINDOWS
 
-PROG = firmata_mapperRPi
+PROG = FirmapperRPi
 
 ifeq ($(OS), LINUX)
 TARGET = $(PROG)
@@ -44,7 +44,7 @@ endif
 
 MAKEFLAGS = --jobs=4
 
-OBJS = firmata_mapperRPi.o serial.o
+OBJS = FirmapperRPi.o serial.o
 
 all: $(FINAL_TARGET)
 
@@ -68,7 +68,7 @@ $(PROG).app: $(PROG) Info.plist
 $(PROG).dmg: $(PROG).app
 	mkdir -p dmg_tmpdir
 	cp -r $(PROG).app dmg_tmpdir
-	hdiutil create -ov -srcfolder dmg_tmpdir -format UDBZ -volname "Firmata Mapper RPi" $(PROG).dmg
+	hdiutil create -ov -srcfolder dmg_tmpdir -format UDBZ -volname "Firmapper RPi" $(PROG).dmg
 
 clean:
 	rm -f $(PROG) $(PROG).exe $(PROG).exe.bak $(PROG).dmg *.o
